CHANGELOG

2.1.12
UTIL:

BUGFIX:

GENERAL:


2.1.11 (20230721)
UTIL:
* type=rule | introduce new 'filter=(timestamp-rule-creation <>=! -30 days)' | timestamp-rule-modification
* type=address | introduce 'filter=(value ip4.included-in RFC1918)'
* type=device | introduce actions=xml-extract
type=bpa-generator | extend output if task_id was not correctly available in response

BUGFIX:
* type=rule actions=exporttoexcel | bugfix for field 'ID' to not add additional data column
* type=rule actions=exporttoexcel:file.html,resolveAddresssummary | bugfix to display IP value summary for ip-wildmask objects
* class Addresscommon | bugfix for type=address-merger

GENERAL:
* general - update dynamic content to version: 8729-8157
* * class EthernetInterface - adding/removing address object instead of IP address - extend with stopping e.g. for type=address actions=name-rename if object is used on ethernet interface


2.1.10 (20230714)
UTIL:
* type=address | introduce actions=move-wildcard2network

BUGFIX:
* type=custom-url-category-merger | bugfix to merge correctly objects in DG hierarchy - add reason for exportcsv=file.html
* type=custom-url-category-merger | introduce argument allowaddingmissingobjects
* type=playbook | adjustment to fit to PHP version 8.1.x

GENERAL:


2.1.9 (20230712)
UTIL:
* type=key-manager - extend support for new connection method "in=sase-api://"
* type=address/service/rule/tag/schedule | enable support for actions=display with method "in=sase-api://"
* type=rule | introduce 'filter=(group-tag is.regex /VALUE/)'
* type=tag-merger | extend output why it can not be merged
* different object classes | introduction of sase-api connection - update / separation between XML API and SaseAPI
* type=address-/addressgroup-/service-/servicegroup-/tag-merger | extend with in=sase-api:// support
* in=sase-api:// - Strate Cloud Manager | extend reading objects based on type=